# 3d-pipeline

./: .dockerignore  .gitignore
.claude/: audit-log.jsonl
.github/workflows/: ci.yml
viewer/: README.md
viewer/LedgerViewer/LedgerViewer/: ContentView.swift  InspectorView.swift  LedgerStore.swift  LedgerViewerApp.swift  LedgerWatcher.swift  NodePositionStore.swift  ReservationSheet.swift  Thumbnail.swift  (+2 more)
viewer/LedgerViewer/LedgerViewer.xcodeproj/: project.pbxproj
vrm-pipeline/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  calibrate.py  derive.py  embed.py  eval_b.py  generate.py  pipeline.py  presets.py  render.py  requirements.txt  script_guard.py  suggest.py  tag.py  vroid_params.py
vrm-pipeline/crates/ledger/: Cargo.toml
vrm-pipeline/crates/ledger/src/: db.rs  main.rs  schema.rs  search.rs
vrm-pipeline/crates/watch/: Cargo.toml
vrm-pipeline/crates/watch/src/: main.rs
vrm-pipeline/render/: body_params.py  core.py  generate_body.py  object.py  obs.py  vrm.py  vrm_bone_map.py  vrm_convert.py  vrm_edit.py  vrm_utils.py  vrm_validate.py
vrm-pipeline/tests/: glb_fixtures.py  test_body_params.py  test_derive_vroid.py  test_generate_body.py  test_generate_guard.py  test_generate_sandbox.py  test_generate_ssrf.py  test_host_cli.py  test_lineage.py  test_obs.py  test_output_gate.py  test_pipeline_vrm_gate.py  test_presets.py  test_script_guard.py  test_subprocess_timeout.py  test_vrm_bone_map.py  test_vrm_convert.py  test_vrm_edit.py  test_vrm_edit_materials.py  test_vrm_render_manifest.py  test_vrm_validate.py  test_vroid_params.py
(+12 files in other folders)
