[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
