[package]
name = "watch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vrm-watch"
path = "src/main.rs"

[dependencies]
notify = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
